--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "translate": "gulp translate"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "foundation-sites": "^6.5.0",
     "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1",
     "what-input": "^5.1.2"
   }
 }
