--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bootstrap": "^4.1.3",
     "foundation-sites": "^6.5.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
     "slick-carousel": "^1.8.1",
     "what-input": "^5.1.2"
   }
