--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.0.2",
-    "gulp-concat": "^2.5.2",
     "gulp-filter": "^5.1.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-line-ending-corrector": "^1.0.1",
@@ -33,19 +32,13 @@
     "gulp-sass": "^4.0.1",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.6.2",
-    "gulp-uglify": "^3.0.0",
-    "gulp-uglifycss": "^1.0.6",
-    "gulp-wp-pot": "^2.0.7"
+    "gulp-uglifycss": "^1.0.6"
   },
   "scripts": {
     "start": "gulp",
     "styles": "gulp styles",
-    "stylesRTL": "gulp stylesRTL",
-    "vendorsJS": "gulp vendorsJS",
-    "customJS": "gulp customJS",
     "images": "gulp images",
-    "clearCache": "gulp clearCache",
-    "translate": "gulp translate"
+    "clearCache": "gulp clearCache"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
