--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "your-project",
-  "description": "A WPGulp based project.",
+  "name": "wp-theme",
+  "description": "Boilerplate WP theme",
   "version": "1.0.0",
-  "author": "Author Name (https://twitter.com/MrAhmadAwais/)",
+  "author": "Aulladero",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahmadawais/WPGulp"
+    "url": "https://github.com/aulladero/wp-theme"
   },
   "license": "MIT",
   "devDependencies": {
